# AGENTS0

./: .gitignore  ACTION_PLAN.md  AGENT0_GUI_LAUNCH_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  CLEANUP_REPORT.md  CODEBASE_REVIEW.md  COMPARISON_WITH_OFFICIAL.md  DONE.md  GUI.md  GUI_SUCCESS_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  INDEX.md  INDEX_COMPLETE.md  INDEX_LOCAL.md  INTEGRATION_COMPLETE.md  LOCAL_SUMMARY.md  Makefile  PLANNING_SUMMARY.md  PROJECT_PLAN.md  QUICK_FIX_CHECKLIST.md  QUICK_FIX_CHECKLIST_LOCAL.md  QUICK_START.md  README.md  README1.MD  README2.MD  README3.MD  READY_TO_USE.md  REVISED_ACTION_PLAN_LOCAL.md  RUN_SUMMARY.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPROVEMENTS.md  STATUS_REPORT.md  SYSTEM_LAUNCH_SUMMARY.md  UNIFIED_GUI_SUCCESS.md  dashboard_gui.py  demo_unified_system.py  evolution_monitor.py  log_viewer.py  (+10 more)
agent0/: LOCAL_DEVELOPMENT.md  __init__.py  cli.py  cli_monitor.py  commands.py  config.py  curriculum.py  evaluator.py  executor.py  llm_backends.py  llm_client.py  loop.py  mcp_server.py  tools_bridge.py
agent0/agents/: multi_turn.py  prompts.py  prompts_code.py  prompts_logic.py  prompts_long.py  react_parser.py  self_verifier.py  student.py  teacher.py  uncertainty.py
agent0/benchmarks/: __init__.py  evaluator.py  loader.py
agent0/configs/: 3070ti.yaml
agent0/logging/: local_mode_logger.py  security_logger.py  setup.py
agent0/loop/: __init__.py  coordinator.py  curriculum_scheduler.py
agent0/memory/: embedder.py  faiss_store.py
agent0/models/: base.py  factory.py  llama_cpp_client.py  ollama_client.py  vllm_client.py
agent0/rewards/: calculator.py
agent0/router/: cli_bridge.py  cloud_bridge.py  local_router.py
agent0/safety/: code_reviewer.py
agent0/scripts/: eval_bench.py  eval_math.py  eval_suite.py  report_metrics.py  router_proxy.py  run_benchmark.py  run_loop.py  smoke_run.py  test_enhancements.py  train_peft_stub.py  train_rl.py
agent0/storage/: __init__.py  skill_cache.py  trace_store.py
agent0/tasks/: __init__.py  schema.py  verifier.py
agent0/tools/: __init__.py  file_ops.py  http_client.py  math_engine.py  metrics.py  plan_executor.py  python_runner.py  sandbox.py  (+4 more)
benchmarks/: code_sample.jsonl  logic_sample.jsonl  math_sample.jsonl
gui/: README.md  main_dashboard.py  security_monitor.py
runs/: default_config.yaml  security_events.jsonl  trajectories.jsonl
scripts/: monitor_local_execution.py  run_local_round.py  simple_security_demo.py  start_agent0.bat  start_agent0_unified.bat
tests/: basic_smoke_test.py  test_gui_components.py  test_llm_direct.py  test_local_mode.py  test_local_safety.py  test_security_features.py  test_security_fixes.py
(+9 files in other folders)
